force-app/main/default/objects/Campaign/fields/CampagneID_Avaya__c.field-meta.xml
<CustomField>
    <fullName>CampagneID_Avaya__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CampagneID Avaya</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>