force-app/main/default/objects/Campaign/fields/File_d_attente__c.field-meta.xml
<CustomField>
    <fullName>File_d_attente__c</fullName>
    <inlineHelpText>Equivalent a la compétence sur Avaya</inlineHelpText>
    <label>File d&apos;attente</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PRM-Groupe-1</fullName>
                <label>PRM Groupe 1</label>
            </value>
            <value>
                <fullName>PRM-Groupe-2</fullName>
                <label>PRM Groupe 2</label>
            </value>
            <value>
                <fullName>PRM-Groupe-3</fullName>
                <label>PRM Groupe 3</label>
            </value>
            <value>
                <fullName>PRM-Groupe-4</fullName>
                <label>PRM Groupe 4</label>
            </value>
            <value>
                <fullName>PRM-Groupe-5</fullName>
                <label>PRM Groupe 5</label>
            </value>
            <value>
                <fullName>PRM-GROUPE-7</fullName>
                <label>PRM GROUPE 7</label>
            </value>
            <value>
                <fullName>PRM-Groupe-6</fullName>
                <label>PRM Groupe 6</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>