force-app/main/default/objects/Campaign/fields/Ids_des_vues_de_liste__c.field-meta.xml
<CustomField>
    <fullName>Ids_des_vues_de_liste__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ids des vues de liste</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>