force-app/main/default/objects/Campaign/fields/Temps_dattente__c.field-meta.xml
<CustomField>
    <fullName>Temps_dattente__c</fullName>
    <defaultValue>30</defaultValue>
    <inlineHelpText>Secondes</inlineHelpText>
    <label>T&apos;emps d&apos;attente</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>